fixed bubbles and changed key mapping

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            bottom: 0;
-            right: 0;
+            height: 100%;
+            width: 100%;
             overflow: hidden;
         }
 
@@ -47,9 +47,9 @@
         <p>LOADING... PLEASE WAIT</p>
     </div>
     <div id="lol">
-        <p>08/31/94&gt; Site ACTIVATED</p>
-        <p>11/01/16&gt; Biggest Regret: Being stuck on a girl for 2 years, who made me feel worthless.</p>
         <p>11/02/16&gt; Little and Big program INITIATED</p>
+        <p>11/03/16&gt; Type a a a f d f d s a a a to activate the site.</p>
+        <p>11/03/16&gt; Use the a - h keys on your keyboard as a piano.</p>
         <p>
             $Enter the Password@&gt;
         </p>
